# plates-alpr-rust

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
hooks/: Dockerfile  Makefile  response.json
hooks/src/: models.rs
kafka/: docker-compose-single-broker.yml
rust_kafka_listener/: Cargo.toml
rust_kafka_listener/src/: check_redis.rs  main.rs  models.rs
src/: kafka.rs  main.rs  models.rs
