[package]
name = "placas_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.27", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
