[package]
name = "rust_kafka_listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.34.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
futures-util = "0.3"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = "0.23.0"

